# blabbermouth

./: CMakeLists.txt  README.md  manifest.xml
include/: FestivalGenerator.h  FestivalSynthesizer.h  MainWindow.h  QtRosNode.h  TalkingHead.h  TextOutDisplay.h  env_config.h
launch/: blabberface.launch
src/: FestivalGenerator.cpp  FestivalSynthesizer.cpp  MainWindow.cpp  QtRosNode.cpp  TalkingHead.cpp  TextOutDisplay.cpp  env_config.cpp.in  main.cpp
